--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,4 @@
-project.url = http://catalog-dev.drvas.srv.rbt/catalog/open/admin
-project.login = spoadmin
-project.password = 12345678
+project.url = http://catalog-dev.drvas.srv.rbt/
 
 #parameters for web driver create
 webdriver.browser.name = firefox
