CATALOG22-650. Удалена обязательная установка uri

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,4 @@
-project.url = http://catalog-dev.drvas.srv.rbt/
+project.url = http://catalog-dev.drvas.srv.rbt/catalog/develop/admin
 
 #parameters for web driver create
 webdriver.browser.name = firefox
